--- a/src/index.css
+++ b/src/index.css
@@ -230,6 +230,10 @@ a {
   width: 100%;
   padding: 0.3em;
 }
+.sxleft{
+  width: 100%;
+  padding: 0.3em;
+}
 .sleft{
   width: 100%;
   padding: 0.3em;
