--- a/src/index.css
+++ b/src/index.css
@@ -201,9 +201,22 @@ a {
 }
 
 /* responsiviness */
+/* Extra small devices (phones, 480px and down) */
+@media only screen and (max-width: 380px) {
+  *{
+    width: 100%;
+    padding: 0;
+  }
+
+}
+
 
 /* Extra small devices (phones, 480px and down) */
   @media only screen and (min-width: 480px) {
+    *{
+      width: 100%;
+      padding: 0;
+    }
 
   }
 
@@ -329,6 +342,9 @@ input{
     padding: 0.5em;
    
   }
+  *{
+    padding: 0.6em;
+  }
 
 }
 
@@ -336,6 +352,10 @@ input{
 @media only screen and (min-width: 1200px) {
   .left{
     padding: 0.5em;
+  }
+  *{
+    padding: 0.7em
+
   }
 }
 
@@ -349,3 +369,6 @@ input{
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
