--- a/src/index.css
+++ b/src/index.css
@@ -205,7 +205,7 @@ a {
 @media only screen and (max-width: 380px) {
   *{
     width: 100%;
-    padding: 0;
+    padding: 0.6em;
   }
 
 }
@@ -215,7 +215,7 @@ a {
   @media only screen and (min-width: 480px) {
     *{
       width: 100%;
-      padding: 0;
+      padding: 0.6em;
     }
 
   }
@@ -280,19 +280,58 @@ th, td {
 
 
 }
+@media only screen and (min-width: 360px) {
+*{
+  padding: 0em;
+  /* color: #f45; */
+}
+.container{
+  width: 100%;
+  padding: 0;
+  margin: 0%;
+}
+}
+@media only screen and (max-width: 360px) {
+  *{
+   
+    width: 100%;
+  }
+  .container{
+    width: 100%;
+    padding: 0;
+    margin: 0%;
+  }
 
+  }
+  @media only screen and (min-width: 162px) {
+    *{
+     padding: 0;
+      width: 100%;
+    }
+    .container{
+      width: 100%;
+      padding: 0;
+      margin: 0%;
+    }
+  
+    }
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .App-header{
     width: 100%;
   }
-*{
- 
-  width: 100%;
-  padding: 0;
+  *{
+    width: 100%;
+    padding: 0.5em;
+  }
+ /* input{
+  size: 12px;
+  width: 120px;
   margin: 0;
-}
+ }
+  */
 /* */
+
 
 }
 
@@ -302,7 +341,9 @@ th, td {
   .App-header{
     width: 100%;
   }
-
+  img{
+    width: 100%;
+  }
 .button, .btn{
   border-radius: 8px;
   border: 1px solid transparent;
@@ -316,9 +357,6 @@ width: 203px;
 }
 
 }
-
-
-
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
 *{
@@ -342,9 +380,9 @@ input{
     padding: 0.5em;
    
   }
-  *{
+  /* *{
     padding: 0.6em;
-  }
+  } */
 
 }
 
@@ -354,9 +392,10 @@ input{
     padding: 0.5em;
   }
   *{
-    padding: 0.7em
+    padding: 0 0.7em 0.5em 0.7em;
 
   }
+ 
 }
 
 
