--- a/src/index.css
+++ b/src/index.css
@@ -203,6 +203,9 @@ a {
   float: left;
 
 }
+.icon{
+  width: 1em;
+}
 /* responsiviness */
 /* Extra small devices (phones, 480px and down) */
 @media only screen and (max-width: 380px) {
